# ENOIESC

./: LICENSE  README.md  dataset.py  extract.py  main.py  model_thesis_pure_conj_term.py  pyproject.toml  test.py  train.py
benchie/: benchie.py  gold_annotations.py  oie_extractions.py  scores.py
benchie/gold/: benchie_gold_annotations_custom.txt  benchie_gold_annotations_custom1.txt  benchie_gold_annotations_custom2.txt
carb/: CaRB_dev_conj.tsv  carb.py
datasets/: sample300_en.pkl  sampleCustom_en.pkl
evaluate/: OIE2016_dev_conj.txt
rework/: CaRB_dev_rework.txt  OIE2016_dev_rework.txt
scripts/: create_structured_data_with_conj.py  evaluate_models.py
thesis/helpers/: BenchieHelper.py  ConjTermSupplementer.py  LabelHelper.py  OffsetHelper.py  PostprocessHelper.py
thesis/models/: Sentence.py
thesis_tests/: OffsetHelper_test.py  sentence_test.py
utils/: bio.py  preprocess.py  utils.py
