[tool.poetry]
name = "oie_ani"
version = "0.1.0"
description = ""
authors = ["Anika Ilieva <anika.an.ilieva@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.13"
attrs = "19.3.0"
backcall = "0.1.0"
blis = "0.7.8"
brotlipy = "0.7.0"
catalogue = "2.0.6"
certifi = "2020.4.5.1"
cffi = "1.14.0"
chardet = "3.0.4"
click = "7.1.2"
cryptography = "2.9.2"
cymem = "2.0.3"
decorator = "4.4.2"
docopt = "0.6.2"
filelock = "3.0.12"
idna = "2.9"
importlib-metadata = "1.6.0"
ipdb = "0.13.2"
ipython = "7.34.0"
ipython-genutils = "0.2.0"
jedi = "0.17.0"
joblib = "0.15.1"
jsonschema = "3.2.0"
murmurhash = "1.0.2"
nltk = "3.5"
numpy = "1.18.1"
pandas = "1.0.3"
parso = "0.7.0"
pexpect = "4.8.0"
pickleshare = "0.7.5"
plac = "0.9.6"
preshed = "3.0.2"
prompt-toolkit = "3.0.5"
ptyprocess = "0.6.0"
pycparser = "2.20"
pygments = "2.6.1"
pyopenssl = "19.1.0"
pyrsistent = "0.16.0"
pysocks = "1.7.1"
python-dateutil = "2.8.1"
pytz = "2020.1"
regex = "2020.5.14"
requests = "2.23.0"
sacremoses = "0.0.43"
scikit-learn = "0.22.1"
scipy = "1.4.1"
sentencepiece = "0.1.91"
six = "1.14.0"
srsly = "2.4.3"
thinc = "8.1.0"
tokenizers = "0.12.1"
torch = "1.12.1"
tqdm = "4.46.0"
traitlets = "5.3.0"
transformers = "4.21.0"
urllib3 = "1.25.9"
wasabi = "0.9.1"
wcwidth = "0.1.9"
zipp = "3.1.0"
ipykernel = "6.15.0"
spacy = "3.4.1"
spacy-transformers = "1.1.8"
spacy-alignments = "0.8.5"
pyyaml = "6.0"
huggingface-hub = "0.8.1"
matplotlib = "3.5.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"